--- a/cocorico.html
+++ b/cocorico.html
@@ -41,7 +41,7 @@
     <main class="cocorico">
         <article>
             <h1>Cocoricó</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error asperiores ullam in impedit iste quo quia excepturi laboriosam, maxime corrupti delectus, obcaecati sequi facere assumenda. Aperiam unde repudiandae quibusdam corrupti?</p>
+            <p>Turma do paiol programa infantil que se passa em uma fazenda, o personagem principal é o Júlio (Dublado por Fernando Gomes). Seus amigos era os animais da fazenda, o cavalo caipira Alípio (Dublado por Hugo Picchi entre 1996 e 2010 e Léo Abel a partir de 2011), as galinhas Lilica (Dublado por Magda Crudelli entre 1996 e 2010 e Kelly Guidotti a partir de 2011), Lola (Dublado por Eduardo Alves entre 1996 e 2013 e Clayton Bonardi a partir de 2013) e Zazá (Dublado por Neusa de Souza), o convencido papagaio Caco (Dublado por Neusa de Souza), a vaca Mimosa (Dublado por Magda Crudelli entre 1996 e 2010 e Kelly Guidotti a partir de 2011), a índia espertalhona Oriba (Dublado por Álvaro Petersen Jr.) e o morcego pessimista Toquinho (Dublado por Enrique Serrano). Lá estão também seu avô e sua avó (Dublados por Fernando Gomes e Álvaro Petersen Jr.), que apesar de serem apenas os avós de Júlio, todos os chamam assim. No chiqueiro da fazenda moram o bebê porquinho Astolfo (Dublado por Hugo Picchi entre 2000 e 2010 e Enrique Serrano a partir de 2011), e sua mãe Astolfina (Dublado por Hugo Picchi). Juntos eles cantavam e viviam altas aventuras.</p>
         </article>
 
         <section class="imgs-cocorico">
