--- a/programas.html
+++ b/programas.html
@@ -51,7 +51,7 @@
             <section class="programa">
                 <img src="img/programas/ilha-ratimbum.jpg" alt="Ilha ra-tim-bum">
                 <h2>Ilha Rá-Tim-Bum</h2>
-                <p>Paulo Nigro, Greta Antoine, Thuanny Costa, Abayomi de Oliveira e Rafael Formenton interpretam os cinco protagonistas, que acabam indo parar na ilha por acaso e vivem diversas aventuras. Essa ilha é habitada por seres estranhos e fantásticos.</p>
+                <p>Cinco jovens chegam por acidente em uma ilha e não conseguem sair dela. Eles vivem diversas aventuras. Essa ilha é habitada por seres estranhos e fantásticos, os cinco jovens são cobaias do vilão Nefasto, pois ele estuda a melhor maneira de acabar com a raça humana.</p>
             </section>
     
             <section class="programa">
