--- a/quem-somos.html
+++ b/quem-somos.html
@@ -44,7 +44,7 @@
             <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
           trabalho são: Jaquelini Cristina Flavio (RA: 2650832123022), Reginaldo Aparecido de Moraes Junior (RA:
           2650832123004) e Thomas Gonçalves Pereira (RA: 2650832123011). Foi proposto para desenvolvermos o Projeto
-          Integrador, com todo conteúdo aprendido nesse semestre. Há 6 tipos de layouts, com um conteúdo sobre desenhos e
+          Integrador, com todo conteúdo aprendido nesse semestre. O conteúdo escolhido pelo grupo foi sobre desenhos e
           programas brasileiros infantis.</p>
         </article>
 
