--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -46,14 +46,14 @@
             <img src="img/programas/sitio1977.jpg" alt="sitio do picapau amarelo de 1977">
             <section>
                 <h2>1977</h2>
-                <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede Globo no ano de 1977, foi a terceira adaptação televisiva da obra homônima e Monteiro Lobato. A série se passa num sítio, é focada nos personagens criado por Monteiro Lobato, também com alguns personagens do folclore brasileiro. </p>
+                <p>Criado por Monteiro Lobato, o Sitio do Picapau Amarelo se passa em sítio com os mais diversos e fantasiosos personagens. Podemos encontrar por exemplo personagens folclóricos como o Saci que acaba virando amigo de todos do sítio. Cuca a vilã da série sempre atazanando e criando discórdia a todos. Os principais atores são: Dirce Migliaccio – Emilia, André Valli – Visconde de Sabugosa, Julio Cesar – Pedrinho, Izabella Bicalho – Narizinho, Zilka Salaberry  – Dona Benta e Jacyra Sampaio – Tia Nastácia.</p>
             </section>
         </article>
         <article class="sitio2001">
             <img src="img/programas/sitio2001.jpg" alt="">
             <section>
                 <h2>2001</h2>
-                <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede globo. Após ter feito muito sucesso no antepassado a série voltou a ser produzida em 2001 até 2007, focando principalmente nos personagens criados por Lobato. Além dos personagens fantasiosos, como os do folclore brasileiro, pois no sítio tudo é possível, a fantasia se mistura com a realidade fazendo parte do cotidiano dos personagens.</p>
+                <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede globo. Após ter feito muito sucesso no passado a série voltou a ser produzida em 2001 até 2007, focando principalmente nos personagens criados por Lobato. Além dos personagens fantasiosos, como os do folclore brasileiro, pois no sítio tudo é possível, a fantasia se mistura com a realidade fazendo parte do cotidiano dos personagens. Os principais atores são: Nicette Bruno - Dona Benta, Dhu Moraes - Tia Nastácia, Lara Rodrigues - Narizinho, César Cardadeiro - Pedrinho, Isabelle Drummond - Emilia e Cândido Damm - Visconde de Sabugosa</p>
             </section>
         </article>
     </main>
