--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </nav>
             <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
             <figure class="redes-sociais">
-                <img src="img/facebook.png" alt="Logo Facebook">
+                <a href="img/FACEBOOK.jpg"><img src="img/facebook.png" alt="Logo Facebook"></a>
                 <img src="img/instagram.png" alt="Logo Instagram">
                 <img src="img/twitter.png" alt="Logo Twitter">
             </figure>
