--- a/referencias-bibliograficas.html
+++ b/referencias-bibliograficas.html
@@ -13,28 +13,28 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="emissoras.html" id="emissoras">Emissoras</a></li>
+            <li><a href="estudios.html" id="estudios">Estúdios</a></li>
+            <li><a href="desenhos.html" id="desenhos">Desenhos</a>
                 <ul>
-                    <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-                    <li><a href="oswaldo.html">Oswaldo</a></li>
-                    <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                    <li><a href="irmao-do-jorel.html" id="irmao-do-jorel">Irmão do Jorel</a></li>
+                    <li><a href="oswaldo.html" id="oswaldo">Oswaldo</a></li>
+                    <li><a href="turma-da-monica.html" id="turma-da-monica">Turma da Mônica</a></li>
                 </ul>
             </li>
-            <li><a href="programas.html">Programas</a>
+            <li><a href="programas.html" id="programas">Programas</a>
                 <ul>
-                    <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-                    <li><a href="cocorico.html">Cocoricó</a></li>
-                    <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                    <li><a href="castelo-ra-tim-bum.html" id="ra-tim-bum">Castelo Rá-Tim-Bum</a></li>
+                    <li><a href="cocorico.html" id="cocorico">Cocoricó</a></li>
+                    <li><a href="sitio-do-picapau-amarelo.html" id="sitio-do-picapau-amarelo">Sitio do Picapau Amarelo</a></li>
                 </ul>
             </li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="curiosidades.html" id="curiosidades">Curiosidades</a></li>
+            <li><a href="trilha-sonora.html" id="trilha-sonora">Trilha Sonora</a></li>
+            <li><a href="quiz.html" id="quiz">Quiz</a></li>
+            <li><a href="quem-somos.html" id="quem-somos">Quem Somos</a></li>
+            <li><a href="contato.html" id="contato">Contato</a></li>
         </ul>
     </nav>
 
@@ -95,25 +95,34 @@
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
+            <section>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+            </ul>
+            <ul>
                 <li><a href="emissoras.html">Emissoras</a></li>
                 <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                
+            </ul>
+            <ul>
                 <li><a href="desenhos.html">Desenhos</a></li>
                 <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
                 <li><a href="oswaldo.html">Oswaldo</a></li>
                 <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+            </ul>
+            <ul>
+                
                 <li><a href="programas.html">Programas</a></li>
                 <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
                 <li><a href="cocorico.html">Cocoricó</a></li>
-                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-                <li><a href="curiosidades.html">Curiosidades</a></li>
-                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="quem-somos.html">Quem Somos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>    
             </ul>
+          </section>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <figure class="redes-sociais">
@@ -122,7 +131,7 @@
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-    </footer>
+      </footer>
 </body>
 
 </html>
