--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </nav>
             <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
             <figure class="redes-sociais">
-                <a href="redes-sociais/facebrook.html"><img src="img/facebook.png" alt="Logo Facebook"></a>
+                <img src="img/facebook.png" alt="Logo Facebook">
                 <img src="img/instagram.png" alt="Logo Instagram">
                 <img src="img/twitter.png" alt="Logo Twitter">
             </figure>
