--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
-            <section>
+            <div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -77,13 +77,12 @@
                 <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
             </ul>
             <ul>
-                
                 <li><a href="programas.html">Programas</a></li>
                 <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
                 <li><a href="cocorico.html">Cocoricó</a></li>
                 <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>    
             </ul>
-          </section>
+          </div>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <figure class="redes-sociais">
