--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -40,28 +40,27 @@
     </nav>
 
     <main class="irmao-jorel">
-        <img src="img/desenhos/irmao-jorel.jpg" alt="irmão do jorel">
+        
         <article>
             <h1>Irmão do Jorel</h1>
-            <p>A série animada irmão do Jorel teve sua estreia em 22 de setembro de 2014, conta com 4 empolgantes temporadas, todas elas criadas por Juliano Enrico. A animação gira em torno de uma família de acumuladores nos anos 80, no qual o irmão caçula de um jovem popular chamado Jorel tenta ganhar visibilidade em meio ao seu dia a dia, tudo isso de forma bem-humorada.
-                Seu roteiro conta com muitos personagens, porém destacando os principais são: Vovó Gigi (voz por Cecília Lemes), Vovó Juju (Melissa Garcia), Carlos Felino (Daniel Furlan). Danúbio (César Marchetti), Márcio Ririzon (Juliano Enrico), Irmão do Jorel (Andrei Duarte), Débora (Tânia Gaidarji) e Tosh (Hugo Picchi Neto).
-                Juliano Enrico diz que sua motivação foi buscar retratar a sua família na época em que fazia quadrinhos deles, aproveitando das características de cada um para a criação de seus personagens.
-                A avaliação sobre a obra é a construção de algo que consegue unir dois públicos: o adulto e o infantil. Devido a sua própria identidade e a linguagem compreendida por seus públicos-alvo, a série consegue detalhar os conflitos familiares.
-                </p>
+            <section>
+                <p>A série animada irmão do Jorel teve sua estreia em 22 de setembro de 2014, conta com 4 empolgantes temporadas, todas elas criadas por Juliano Enrico. A animação gira em torno de uma família de acumuladores nos anos 80, no qual o irmão caçula de um jovem popular chamado Jorel tenta ganhar visibilidade em meio ao seu dia a dia, tudo isso de forma bem-humorada. Seu roteiro conta com muitos personagens, porém destacando os principais são: Vovó Gigi (voz por Cecília Lemes), Vovó Juju (Melissa Garcia), Carlos Felino (Daniel Furlan). Danúbio (César Marchetti), Márcio Ririzon (Juliano Enrico), Irmão do Jorel (Andrei Duarte), Débora (Tânia Gaidarji) e Tosh (Hugo Picchi Neto). Juliano Enrico diz que sua motivação foi buscar retratar a sua família na época em que fazia quadrinhos deles, aproveitando das características de cada um para a criação de seus personagens. A avaliação sobre a obra é a construção de algo que consegue unir dois públicos: o adulto e o infantil. Devido a sua própria identidade e a linguagem compreendida por seus públicos-alvo, a série consegue detalhar os conflitos familiares.</p> 
+            <img src="img/desenhos/irmao-jorel.jpg" alt="irmão do jorel">
+            </section>
         </article>
 
-        <aside>
+        <div>
             <img src="img/desenhos/irmao-jorel3.jpg" alt="familia irmao do jorel">
             <img src="img/desenhos/irmao-jorel4.jpg" alt="cena de ação">
             <img src="img/desenhos/irmao-jorel2.jpg" alt="personagens">
-        </aside>
+        </div>
     </main>
 
 
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
-            <section>
+            <div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -82,13 +81,12 @@
                 <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
             </ul>
             <ul>
-                
                 <li><a href="programas.html">Programas</a></li>
                 <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
                 <li><a href="cocorico.html">Cocoricó</a></li>
                 <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>    
             </ul>
-          </section>
+          </div>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <figure class="redes-sociais">
