--- a/programas.html
+++ b/programas.html
@@ -8,13 +8,7 @@
 </head>
 
 <body id="programas">
-    <a id="topo">
-        <a href="#topo">
-          <div id="botao_topo">
-              <img src="img/img.jpg" />
-          </div>
-        </a>
-    </a>
+
     <header>
        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
@@ -48,7 +42,7 @@
     
     <article>
         <h1>Programas</h1>
-        <section class="programas">
+        <div class="programas">
             <section class="programa">
                 <img src="img/programas/glub.jpg" alt="glub glub">
                 <h2>Glub Glub</h2>
@@ -83,13 +77,13 @@
                 <h2>X-Tudo</h2>
                 <p>O personagem X era quem comandava boa parte dos quadros e discutia com as crianças os assuntos como biologia, filosofia, história mundial, meio ambiente e cidadania. Além disso, o programa também ensinava as crianças a fazerem truques de mágicas, culinária básica e experimentos científicos.</p>
             </section>
-        </section>
+        </div>
     </article>
 
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
-            <section>
+            <div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -110,13 +104,12 @@
                 <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
             </ul>
             <ul>
-                
                 <li><a href="programas.html">Programas</a></li>
                 <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
                 <li><a href="cocorico.html">Cocoricó</a></li>
                 <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>    
             </ul>
-          </section>
+          </div>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <figure class="redes-sociais">
