--- a/quiz.html
+++ b/quiz.html
@@ -8,13 +8,7 @@
 </head>
 
 <body id="quiz">
-    <a id="topo">
-        <a href="#topo">
-          <div id="botao_topo">
-              <img src="img/img.jpg" />
-          </div>
-        </a>
-    </a>
+    
     <header>
         <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
@@ -128,7 +122,7 @@
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
-            <section>
+            <div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -149,13 +143,12 @@
                 <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
             </ul>
             <ul>
-                
                 <li><a href="programas.html">Programas</a></li>
                 <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
                 <li><a href="cocorico.html">Cocoricó</a></li>
                 <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>    
             </ul>
-          </section>
+          </div>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <figure class="redes-sociais">
