--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
-<body id=contato>
+<body>
     <header>
        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
@@ -39,16 +39,16 @@
     </nav>
 
     <main class="contato">
-        <article>
+        <section>
             <h1>Contato</h1>
             <p>Quer falar conosco?</p>
             <p>Deixe sua mensagem</p>
-        </article>
+        </section>
 
         <form class="formulario">
-            <p><label>Nome: <input type="text" name="nome"></label></p>
-            <p><label>E-mail: <input type="email" name="email"></label></p>
-            <p><label>Mensagem: <textarea name="mensagem" cols="23" rows="10"></textarea></label></p>
+            <p><label>Nome: <input type="text" name="nome" placeholder="John Doe"></label></p>
+            <p><label>E-mail: <input type="email" name="email" placeholder="email@servidor.com"></label></p>
+            <p><label>Mensagem: <textarea name="mensagem" cols="23" rows="10" placeholder="Escreva aqui"></textarea></label></p>
             <p><button>Enviar</button></p>
         </form>
     </main>
