--- a/turma-da-monica.html
+++ b/turma-da-monica.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
-<body id="turma-da-monica">
+<body>
     <header>
        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
@@ -48,12 +48,12 @@
                 </p>
         </article>
         
-        <aside>
+        <div>
             <img src="img/desenhos/turma-da-monica.jpg" alt="Turma da mônica">
             <img src="img/desenhos/turma-da-monica-jogo.jpg" alt="Jogo da turma da monica">
             <img src="img/desenhos/turma-da-monica-filme.jpg" alt="Filme da turma da monica">
             <img src="img/desenhos/turma-da-monica-gibi.jpg" alt="Primeiro gibi da turma da monica">
-        </aside>
+        </div>
     </main>
 
     <footer class="footer">
