--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@
 
         <form class="formulario">
             <p><label>Nome: <input type="text" name="nome" placeholder="John Doe"></label></p>
-            <p><label>E-mail: <input type="email" name="email" placeholder="email@servidor.com"></label></p>
+            <p><label>E-mail: <input type="email" name="email" placeholder="johndoe@email.com"></label></p>
             <p><label>Mensagem: <textarea name="mensagem" cols="23" rows="10" placeholder="Escreva aqui"></textarea></label></p>
             <p><button>Enviar</button></p>
         </form>
