--- a/oswaldo.html
+++ b/oswaldo.html
@@ -42,9 +42,8 @@
     <main class="oswaldo">
         <article>
             <h1>Oswaldo</h1>
-            <p>A série animada Oswaldo conta com sua surpreendente pitada de humor ágil e traços da cultura pop brasileira, tudo girando em torno do cotidiano do personagem principal, Oswaldo, na qual simples situações são transformadas em aventuras épicas.
-                Criada pelo estúdio Birdo Studio, a animação é desenvolvida em 3 temporadas bem-humoradas do pinguim antropomórfico de 12 anos que está no sexto ano da escola. Estreou nas plataformas digitais em 11 de outubro de 2017, sendo bem aceita pelo mais variado público. 
-                Em seu elenco encontramos as vozes de: Joel Vieira (Oswaldo), Vini Wolf e Italo Luiz (Tobias), Melissa Garcia (Léia), Mabel Cezar (Srta. Feramina) e Nestor Chiesse (Paulito).
+            <p>A série animada Oswaldo conta com sua surpreendente pitada de humor ágil e traços da cultura pop brasileira, tudo girando em torno do cotidiano do personagem principal, Oswaldo, na qual simples situações são transformadas em aventuras épicas. Criada pelo estúdio Birdo Studio, a animação é desenvolvida em 3 temporadas bem-humoradas do pinguim antropomórfico de 12 anos que está no sexto ano da escola. 
+Estreou nas plataformas digitais em 11 de outubro de 2017, sendo bem aceita pelo mais variado público.  Em seu elenco encontramos as vozes de: Joel Vieira (Oswaldo), Vini Wolf e Italo Luiz (Tobias), Melissa Garcia (Léia), Mabel Cezar (Srta. Feramina) e Nestor Chiesse (Paulito).
                 </p>
         </article>
         
