Adicionada a pagina de tabela

--- a/programas.html
+++ b/programas.html
@@ -40,7 +40,7 @@
         </ul>
     </nav>
     
-    <article>
+    <article class="article-programacao">
         <h1>Programas</h1>
         <div class="programas">
             <section class="programa">
@@ -78,6 +78,7 @@
                 <p>O personagem X era quem comandava boa parte dos quadros e discutia com as crianças os assuntos como biologia, filosofia, história mundial, meio ambiente e cidadania. Além disso, o programa também ensinava as crianças a fazerem truques de mágicas, culinária básica e experimentos científicos.</p>
             </section>
         </div>
+        <a href="tabelaprogramacao.html">Programação</a>
     </article>
 
     <footer class="footer">
