acrescntado imagem na pagina de contato

--- a/contato.html
+++ b/contato.html
@@ -43,6 +43,7 @@
             <h1>Contato</h1>
             <p>Quer falar conosco?</p>
             <p>Deixe sua mensagem</p>
+            <img src="img/mapa.png">
         </section>
 
         <form class="formulario">
