Menu fixo de todas as paginas, colocada a logo dentro do nav

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
     <nav class="nav">
+      <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
       <ul>
           <li><a href="index.html" id="h">Home</a></li>
           <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -39,7 +36,8 @@
       </ul>
   </nav>
     
-    <main >
+   <div class="body">
+    <main>
       <h1>Curiosidades</h1>
       <div class="curiosidades">
           <section class="castelo">
@@ -259,6 +257,7 @@
       </figure>
       <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
+   </div>
 </body>
 
 </html>
