--- a/emissoras.html
+++ b/emissoras.html
@@ -9,10 +9,8 @@
 
 <body>
 
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
     <nav class="nav">
+      <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
       <ul>
           <li><a href="index.html" id="h">Home</a></li>
           <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -39,7 +37,8 @@
       </ul>
   </nav>
 
-    <article  class="emissoras">
+    <div class='body'>
+      <article  class="emissoras">
         <h1> Emissoras brasileiras </h1>
         <p class="centralizado">Existem muitas emissoras televisivas, foi selecionado as principais da tv aberta do Brasil.</p>
   
@@ -153,6 +152,7 @@
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
       </footer>
+    </div>
 </body>
 
 </html>
