--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-    <header>
-        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
-
     <nav class="nav">
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
         <ul>
             <li><a href="index.html" id="h">Home</a></li>
             <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -39,8 +36,7 @@
         </ul>
     </nav>
 
-    <main class="irmao-jorel">
-        
+    <div class="body"><main class="irmao-jorel">     
         <article>
             <h1>Irmão do Jorel</h1>
             <div>
@@ -56,7 +52,6 @@
             <img src="img/desenhos/irmao-jorel4.jpg" alt="cena de ação">           
         </div>
     </main>
-
 
     <footer class="footer">
         <nav>
@@ -96,7 +91,7 @@
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-      </footer>
+    </footer></div>
 </body>
 
 </html>
