--- a/referencias-bibliograficas.html
+++ b/referencias-bibliograficas.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
     <nav class="nav">
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
         <ul>
             <li><a href="index.html" id="home">Home</a></li>
             <li><a href="emissoras.html" id="emissoras">Emissoras</a></li>
@@ -38,7 +36,7 @@
         </ul>
     </nav>
 
-    <main class="ref-bibliografica">
+    <div class="body"><main class="ref-bibliografica">
         <div>
             <p><a href="https://incrivel.club/inspiracao-criancas/15-desenhos-produzidos-aqui-no-brasil-para-voce-maratonar-e-se-divertir-com-a-criancada-1138860/">15 Desenhos animados feitos por brasileiros para você se divertir e maratonar com a criançada</a> 01/09/2021 19:50</p>
             <p><a href="https://pt.wikipedia.org/wiki/Categoria:Programas_de_televis%C3%A3o_infantis_do_Brasil">Categoria:Programas de televisão infantis do Brasil</a> 01/09/2021 19:55</p>
@@ -130,7 +128,7 @@
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-      </footer>
+    </footer></div>
 </body>
 
 </html>
