--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
     <nav class="nav">
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
         <ul>
             <li><a href="index.html" id="h">Home</a></li>
             <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -38,7 +36,7 @@
         </ul>
     </nav>
 
-    <article class="article-sitio">
+    <div class="body"><article class="article-sitio">
 
         <h1>Sítio do Picapau Amarelo</h1>
         
@@ -96,7 +94,7 @@
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-      </footer>
+    </footer></div>
 </body>
 
 </html>
