--- a/turma-da-monica.html
+++ b/turma-da-monica.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
-
     <nav class="nav">
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
         <ul>
             <li><a href="index.html" id="h">Home</a></li>
             <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -39,7 +36,7 @@
         </ul>
     </nav>
     
-    <main class="turma-monica">
+    <div class="body"><main class="turma-monica">
         <article>
             <h1>Turma da Mônica</h1>
             <p>Turma da Mônica, criada por Maurício de Sousa, conta com diversas datas de lançamento em suas mais variadas plataformas. A primeira foi a publicação de tirinhas em 1959, posteriormente, em 1970 teve sua publicação em revistas e, por fim, em 1976 a turma entrou no cenário das animações.
@@ -94,7 +91,7 @@
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-      </footer>
+    </footer></div>
 </body>
 
 </html>
