--- a/oswaldo.html
+++ b/oswaldo.html
@@ -8,11 +8,9 @@
 </head>
 
 <body>
-    <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
-    </header>
 
     <nav class="nav">
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
         <ul>
             <li><a href="index.html" id="h">Home</a></li>
             <li><a href="emissoras.html" id="em">Emissoras</a></li>
@@ -39,7 +37,7 @@
         </ul>
     </nav>
 
-    <main class="oswaldo">
+    <div class="body"><main class="oswaldo">
         <article>
             <h1>Oswaldo</h1>
             <p>A série animada Oswaldo conta com sua surpreendente pitada de humor ágil e traços da cultura pop brasileira, tudo girando em torno do cotidiano do personagem principal, Oswaldo, na qual simples situações são transformadas em aventuras épicas. Criada pelo estúdio Birdo Studio, a animação é desenvolvida em 3 temporadas bem-humoradas do pinguim antropomórfico de 12 anos que está no sexto ano da escola. 
@@ -52,7 +50,6 @@ Estreou nas plataformas digitais em 11 de outubro de 2017, sendo bem aceita pelo
         </aside>
     </main>
     
-
     <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
@@ -91,7 +88,7 @@ Estreou nas plataformas digitais em 11 de outubro de 2017, sendo bem aceita pelo
             <img src="img/twitter.png" alt="Logo Twitter">
         </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
-      </footer>
+    </footer></div>
 </body>
 
 </html>
