ajustado o alt de das imagens de algumas pagnas

--- a/cocorico.html
+++ b/cocorico.html
@@ -44,11 +44,11 @@
             </article>
     
             <div class="imgs-cocorico">
-                <img src="img/programas/cocorico.jpg" alt="personagens principais">
+                <img src="img/programas/cocorico.jpg" alt="personagens Julio, alipio, zaza, lola e lilica">
     
                 <div class="img-cocorico">
-                    <img src="img/programas/cocorico2.jpg" alt="personagens secundarios">
-                    <img src="img/programas/cocorico3.jpg" alt="outros personagens">
+                    <img src="img/programas/cocorico2.jpg" alt="personagens Astolfo, dito e feito">
+                    <img src="img/programas/cocorico3.jpg" alt="personagens vovô e vovó, Oriba e João">
                 </div>
             </div>
         </main>
