--- a/contato.html
+++ b/contato.html
@@ -42,7 +42,7 @@
                 <h1>Contato</h1>
                 <p>Quer falar conosco?</p>
                 <p>Deixe sua mensagem</p>
-                <img src="img/mapa.png">
+                <img src="img/mapa.png" alt="Mapa ficticio">
             </section>
     
             <form class="formulario">
