--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </article>
             
             <aside class="imghome">
-                <img src="img/img-home.jpg" alt="imagem com varios personagens televisivo">
+                <img src="img/img-home.jpg" alt="varios personagens, do castelo ra-tim-bum, de onde vem, sitio do picapau amarelo, oswaldo, cocorico, irmão do jorel, historietas e any malu">
             </aside>
         </main>
       
