--- a/oswaldo.html
+++ b/oswaldo.html
@@ -46,7 +46,7 @@ Estreou nas plataformas digitais em 11 de outubro de 2017, sendo bem aceita pelo
         </article>
         
         <aside class="aside-oswaldo">
-            <img src="img/desenhos/oswaldo.jpg" alt="Oswaldo e sua galera">
+            <img src="img/desenhos/oswaldo.jpg" alt="Oswaldo e seus amigos">
         </aside>
     </main>
     
