--- a/quem-somos.html
+++ b/quem-somos.html
@@ -49,9 +49,9 @@
             </article>
     
               <aside class="integrantes">
-                <img src="img/quem-somos/jaquelini.jpg" alt="Jaquelini">
-                <img src="img/quem-somos/reginaldo.jpg" alt="Reginaldo">
-                <img src="img/quem-somos/thomas.jpg" alt="Thomas">
+                <img src="img/quem-somos/jaquelini.jpg" alt="Integrante do grupo Jaquelini">
+                <img src="img/quem-somos/reginaldo.jpg" alt="Integrante do grupo Reginaldo">
+                <img src="img/quem-somos/thomas.jpg" alt="Integrante do grupo Thomas">
             </aside>
         </main>
           
