--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -48,7 +48,7 @@
             </section>
         </div>
         <div class="sitio2001">
-            <img src="img/programas/sitio2001.jpg" alt="">
+            <img src="img/programas/sitio2001.jpg" alt="sitio do picapau amarelo de 2001">
             <section>
                 <h2>2001</h2>
                 <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede globo. Após ter feito muito sucesso no passado a série voltou a ser produzida em 2001 até 2007, focando principalmente nos personagens criados por Lobato. Além dos personagens fantasiosos, como os do folclore brasileiro, pois no sítio tudo é possível, a fantasia se mistura com a realidade fazendo parte do cotidiano dos personagens. Os principais atores são: Nicette Bruno - Dona Benta, Dhu Moraes - Tia Nastácia, Lara Rodrigues - Narizinho, César Cardadeiro - Pedrinho, Isabelle Drummond - Emilia e Cândido Damm - Visconde de Sabugosa</p>
