--- a/castelo-ra-tim-bum.html
+++ b/castelo-ra-tim-bum.html
@@ -45,10 +45,10 @@
                 <p>Nino é um menino de 300 anos que vive com seu tio e tia-avó, eles moram num castelo. No castelo tem animais falantes e recebe diariamente a visita de amigos humanos como por exemplo o Zeca, Pedro e Biba e outros. O vilão da história conhecido como Dr. Abobrinha, sempre disfarçado querendo comprar Castelo para construir um enorme prédio de cem andares.</p>
             </article>
             <aside class="img-castelo">
-                <img src="img/programas/personagens.jpg" alt="personagens principais">
-                <img src="img/programas/etevaldo.jpg" alt="etevaldo">
+                <img src="img/programas/personagens.jpg" alt="Personagens, dr. Victor, Tia Morgana, Biba, Nino, Zequinha e Pedro">
+                <img src="img/programas/etevaldo.jpg" alt="etevaldo e sua amiga">
                 <img src="img/programas/passarinho.jpg" alt="passarinhos">
-                <img src="img/programas/moradores.jpg" alt="moradores do castelo">
+                <img src="img/programas/moradores.jpg" alt="moradores do castelo: gato pintado, mal, godofreso, celeste e porteiro">
                 <img src="img/programas/dr-abobrinha.jpg" alt="dr abobrinha">
             </aside>
         </main>
