--- a/trilha-sonora.html
+++ b/trilha-sonora.html
@@ -39,18 +39,18 @@
     <div class="body">
         <article class="trilha">
             <h1>Trilhas nostálgicas</h1>
-            <a href="https://www.youtube.com/watch?v=O9snMaJj62Y" target="_blank"><img src="img/trilha-sonora/abertura-casteloratimbum.jpg" alt="castelo ra tim bum"></a>
-            <a href="https://www.youtube.com/watch?v=s9p9m0ebJmg" target="_blank"><img src="img/trilha-sonora/ratinhotomandobanho.jpg" alt="ratinho tomando banho"></a>
-            <a href="https://www.youtube.com/watch?v=UjUsAQc0T60" target="_blank"><img src="img/trilha-sonora/abertura-cocorico.jpg" alt=" cocorico"></a>
-            <a href="https://www.youtube.com/watch?v=IEBbg20WRsM" target="_blank"><img src="img/trilha-sonora/abertura-trombatrem.jpg" alt="tromba trem"></a>
-            <a href="https://www.youtube.com/watch?v=yApJ7F4z0a4" target="_blank"><img src="img/trilha-sonora/abertura-dogmons.jpg" alt="dogmons"></a>
-            <a href="https://www.youtube.com/watch?v=p4uy4faQLgM" target="_blank"><img src="img/trilha-sonora/abertura-irmaodojorel.jpg" alt="irmão do jorel"></a>
-            <a href="https://www.youtube.com/watch?v=7KEt06ZljRA" target="_blank"><img src="img/trilha-sonora/abertura-fudencio.jpg" alt="fudencio"></a>
-            <a href="https://www.youtube.com/watch?v=GO94XCuXEqs" target="_blank"><img src="img/trilha-sonora/abertura-sitiodopicapau-amarelo.jpg" alt="sitio do pica-pau amarelo"></a>
-            <a href="https://www.youtube.com/watch?v=Pia8EBfzhF8" target="_blank"><img src="img/trilha-sonora/superfantastico.jpg" alt="super fantastico"></a>
-            <a href="https://www.youtube.com/watch?v=TpcbIxLbDGk" target="_blank"><img src="img/trilha-sonora/abertura-ratimbum.jpg" alt="ra tim bum"></a>
-            <a href="https://www.youtube.com/watch?v=c-WqcIUP5Gg" target="_blank"><img src="img/trilha-sonora/abertura-mundodalua.jpg" alt="mundo da lua"></a>
-            <a href="https://www.youtube.com/watch?v=yflyejDF5Ao" target="_blank"><img src="img/trilha-sonora/abertura-ilharatimbum.jpg" alt="ilha ra tim bum"></a>
+            <a href="https://www.youtube.com/watch?v=O9snMaJj62Y" target="_blank"><img src="img/trilha-sonora/abertura-casteloratimbum.jpg" alt="capa castelo ra tim bum"></a>
+            <a href="https://www.youtube.com/watch?v=s9p9m0ebJmg" target="_blank"><img src="img/trilha-sonora/ratinhotomandobanho.jpg" alt="capa ratinho tomando banho"></a>
+            <a href="https://www.youtube.com/watch?v=UjUsAQc0T60" target="_blank"><img src="img/trilha-sonora/abertura-cocorico.jpg" alt="capa cocorico"></a>
+            <a href="https://www.youtube.com/watch?v=IEBbg20WRsM" target="_blank"><img src="img/trilha-sonora/abertura-trombatrem.jpg" alt="capa tromba trem"></a>
+            <a href="https://www.youtube.com/watch?v=yApJ7F4z0a4" target="_blank"><img src="img/trilha-sonora/abertura-dogmons.jpg" alt="capa dogmons"></a>
+            <a href="https://www.youtube.com/watch?v=p4uy4faQLgM" target="_blank"><img src="img/trilha-sonora/abertura-irmaodojorel.jpg" alt="capa irmão do jorel"></a>
+            <a href="https://www.youtube.com/watch?v=7KEt06ZljRA" target="_blank"><img src="img/trilha-sonora/abertura-fudencio.jpg" alt="capa udencio"></a>
+            <a href="https://www.youtube.com/watch?v=GO94XCuXEqs" target="_blank"><img src="img/trilha-sonora/abertura-sitiodopicapau-amarelo.jpg" alt="capa sitio do pica-pau amarelo"></a>
+            <a href="https://www.youtube.com/watch?v=Pia8EBfzhF8" target="_blank"><img src="img/trilha-sonora/superfantastico.jpg" alt="capa super fantastico"></a>
+            <a href="https://www.youtube.com/watch?v=TpcbIxLbDGk" target="_blank"><img src="img/trilha-sonora/abertura-ratimbum.jpg" alt="capa ra tim bum"></a>
+            <a href="https://www.youtube.com/watch?v=c-WqcIUP5Gg" target="_blank"><img src="img/trilha-sonora/abertura-mundodalua.jpg" alt="capa mundo da lua"></a>
+            <a href="https://www.youtube.com/watch?v=yflyejDF5Ao" target="_blank"><img src="img/trilha-sonora/abertura-ilharatimbum.jpg" alt="capa ilha ra tim bum"></a>
         </article>
     
         <footer class="footer">
